--- a/src/app/features/patient-details/edit-form/form.component.html
+++ b/src/app/features/patient-details/edit-form/form.component.html
@@ -1,6 +1,10 @@
 <form [formGroup]="formGroup" (keydown.enter)="$event.preventDefault()">
   <div
-    class="mb-4 grid grid-cols-3 gap-4 rounded-lg border border-solid border-tone-2 bg-background px-8 py-6 focus:border-2">
+    [ngClass]="
+      formMode === FormMode.readonly
+        ? 'mb-4 grid grid-cols-3 gap-4 rounded-lg border border-solid border-tone-1 bg-white px-8 py-6 shadow'
+        : 'mb-4 grid grid-cols-3 gap-4 rounded-lg border border-solid border-tone-2 bg-background px-8 py-6 focus:border-2'
+    ">
     <div>
       <div class="flex flex-row">
         <label for="patient-name" [ngClass]="isFieldInvalid('firstname') ? 'valid' : 'invalid'">{{
@@ -16,7 +20,7 @@
         id="patient-name"
         placeholder="{{ 'placeholders.patient.name' | translate }}"
         formControlName="firstname"
-        [ngClass]="isFieldInvalid('firstname') ? 'invalid' : 'valid'" />
+        [ngClass]="formMode === FormMode.readonly ? 'readonly' : isFieldInvalid('firstname') ? 'invalid' : 'valid'" />
       <p
         *ngIf="isFieldInvalid('firstname') && hasError('firstname', 'required')"
         class="mt-2 text-sm text-red-600 dark:text-red-500">
@@ -37,7 +41,7 @@
         id="patient-lastname"
         placeholder="{{ 'placeholders.patient.lastName' | translate }}"
         formControlName="lastname"
-        [ngClass]="isFieldInvalid('lastname') ? 'invalid' : 'valid'" />
+        [ngClass]="formMode === FormMode.readonly ? 'readonly' : isFieldInvalid('lastname') ? 'invalid' : 'valid'" />
       <p
         *ngIf="isFieldInvalid('lastname') && hasError('lastname', 'required')"
         class="mt-2 text-sm text-red-600 dark:text-red-500">
@@ -58,7 +62,7 @@
         id="patient-birthdate"
         max="2999-12-31"
         formControlName="birthdate"
-        [ngClass]="isFieldInvalid('birthdate') ? 'invalid' : 'valid'" />
+        [ngClass]="formMode === FormMode.readonly ? 'readonly' : isFieldInvalid('birthdate') ? 'invalid' : 'valid'" />
       <p
         *ngIf="isFieldInvalid('birthdate') && hasError('birthdate', 'required')"
         class="mt-2 text-sm text-red-600 dark:text-red-500">
@@ -66,13 +70,24 @@
       </p>
     </div>
   </div>
+  <ng-container *ngIf="(isLoading$ | async) === false; else loading"></ng-container>
   <ce-category [biomarkers]="biomarkers" [formGroup]="formGroup" class="flex flex-col" />
-  <div class="mt-6 flex flex-row justify-end">
+  <div class="mt-6 flex flex-row justify-end" *ngIf="formMode !== FormMode.readonly">
     <button class="secondary mb-10 mr-5" type="button" (click)="saveDraft()">
       {{ 'scores.saveDraft' | translate }}
     </button>
-    <button class="action mb-10" type="button" (click)="saveForm()" [disabled]="formGroup.invalid">
+    <button class="action mb-10" (click)="saveForm()" type="button" [disabled]="formGroup.invalid">
       {{ 'scores.calculate' | translate }}
     </button>
   </div>
 </form>
+<ng-template #loading>
+  <div
+    [ngClass]="
+      formMode === FormMode.readonly
+        ? 'mb-4 flex justify-center rounded-lg border border-solid border-tone-1 bg-white px-8 py-6 shadow'
+        : 'mb-4 flex justify-center rounded-lg border border-solid border-tone-2 bg-background px-8 py-6 focus:border-2'
+    ">
+    <ce-loading-indicator class="p-12" />
+  </div>
+</ng-template>
