--- a/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
+++ b/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
@@ -16,11 +16,12 @@
         class="block w-full rounded-md border p-2 placeholder:text-label-2"
         [placeholder]="0"
         formControlName="value"
-        [ngClass]="isFieldInvalid('value') ? 'invalid' : 'valid'" />
+        [ngClass]="
+          (formMode$ | async) === FormMode.readonly ? 'readonly' : isFieldInvalid('value') ? 'invalid' : 'valid'
+        " />
       <div class="absolute inset-y-0 right-0 flex items-center">
         <ng-container *ngIf="!unitTypeEditable; else editUnits">
-          <div
-            class="flex h-full items-center justify-center rounded-md py-1 pl-2 pr-2 text-label-2 focus:ring-2 focus:ring-inset focus:ring-indigo-600">
+          <div [ngClass]="(formMode$ | async) === FormMode.readonly ? 'readonly' : 'editable'" class="unit">
             <p class="text-center">{{ currentUnit?.shorthand }}</p>
           </div>
         </ng-container>
