--- a/src/app/features/patient-details/biomarker/medical-history/medical-history.component.scss
+++ b/src/app/features/patient-details/biomarker/medical-history/medical-history.component.scss
@@ -1,13 +1,16 @@
 input {
   @apply w-full rounded-md border border-tone-2 py-1.5 pl-2 shadow-sm focus:outline-none focus:ring-1 focus:ring-inset focus:ring-primary disabled:bg-gray-200;
-  &.valid {
-  }
-
   &.invalid {
     @apply border-red-500 border-red-500 bg-red-50 text-sm text-red-900 placeholder-red-700 ring-red-500;
   }
   &:disabled + label {
     @apply cursor-default bg-gray-300;
+  }
+  &.readonly + label {
+    @apply bg-gray-100;
+  }
+  &.readonly {
+    @apply bg-gray-100;
   }
   &.ng-invalid {
     @apply border-red-500 border-red-500 bg-red-50 text-sm text-red-900 placeholder-red-700 ring-red-500;
@@ -23,4 +26,22 @@ input {
 
 .ng-invalid > p.error-message {
   display: block;
+}
+
+.option-label {
+  @apply block cursor-pointer select-none rounded-md border border-tone-2 bg-tone-1 p-2 text-text;
+
+  &.editable {
+    @apply peer-checked:border-primary peer-checked:bg-primary peer-checked:text-white;
+  }
+  &.readonly {
+    @apply peer-checked:border-black peer-checked:bg-gray-200 peer-checked:text-black;
+  }
+}
+
+.unit {
+  @apply flex h-full items-center justify-center rounded-md py-1 pl-2 pr-2 text-label-2 focus:ring-2 focus:ring-inset focus:ring-indigo-600;
+  &.readonly {
+    @apply text-black;
+  }
 }
