--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,6 @@
     @apply px-6 py-2 text-text;
   }
   label {
-    @apply whitespace-nowrap text-label;
+    @apply whitespace-nowrap text-label disabled:text-black;
   }
 }
