--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -74,7 +74,7 @@
           <label
             for="telephone"
             class="absolute left-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600"
-            >{{ 'profile.contact.phoneNumber' | translate }}</label
+            >{{ 'profile.phoneNumber' | translate }}</label
           >
         </div>
         <div name="country" class="relative">
