--- a/src/app/features/patient-records/list/list.component.html
+++ b/src/app/features/patient-records/list/list.component.html
@@ -27,10 +27,10 @@
           </div>
         </td>
         <td *ngIf="showDetailsButton" class="px-6 py-6">
-          <button *ngIf="!record.isDraft" class="edit self-end" (click)="openSpecificScore.emit(record.requestId)">
+          <button *ngIf="!record.isDraft" class="edit" (click)="openSpecificScore.emit(record.requestId)">
             {{ 'scores.details' | translate }}
           </button>
-          <button *ngIf="record.isDraft" class="edit self-end pl-5" (click)="editSpecificScore.emit(record.requestId)">
+          <button *ngIf="record.isDraft" class="edit" (click)="editSpecificScore.emit(record.requestId)">
             {{ 'scores.edit' | translate }}
           </button>
         </td>
